# TlgJson

./: Access2Json.cpp  CMakeLists.txt  CMakePresets.json  JSon2Access.cpp  OdbcInfo.cpp  OdbcPrimitive.cpp  Platform.h  PrettyPrint.cpp  PrettyPrint.h  ShellEx.cpp  Some_queries.sql  TlgInfo.json  ToText.cpp  platform.cpp  utf8Conversion.cpp  utf8Conversion.h
